<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    tools:context=".fragment.CreateFragment">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"></Spinner>

    <ImageView
        android:id="@+id/thumb"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:adjustViewBounds="true"
        android:background="@drawable/background_button"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_image_blank"></ImageView>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_2sdp">

        <EditText
            android:id="@+id/edt_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:hint="@string/hint_input_title"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:singleLine="true"></EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_2sdp">

        <EditText
            android:id="@+id/edt_description"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:hint="@string/hint_input_description"
            android:imeOptions="actionNext"
            android:inputType="text"></EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_2sdp">

        <EditText
            android:id="@+id/edt_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|top"
            android:hint="@string/hint_input_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="4"></EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginVertical="@dimen/_16sdp"
            android:layout_weight="1"
            android:background="@drawable/background_button"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/title_button_save"
            android:textColor="@color/ef_white"></TextView>

        <TextView
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginVertical="@dimen/_16sdp"
            android:layout_weight="1"
            android:background="@drawable/background_button"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/title_button_delete"
            android:textColor="@color/ef_white"
            android:visibility="gone"></TextView>

        <TextView
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginVertical="@dimen/_16sdp"
            android:layout_weight="1"
            android:background="@drawable/background_button"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/title_button_update"
            android:textColor="@color/ef_white"
            android:visibility="gone"></TextView>
    </LinearLayout>


</LinearLayout>